# BioOPT

./: CMakeLists.txt  README.md  setup.py
bioopt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
include/: base_optimizer.h  ga.h  pso.h  sma.h
src/: main.cpp
src/algorithms/: ga.cpp  pso.cpp  sma.cpp
src/bindings/: bindings.cpp
src/bioopt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/core/: optimizer.cpp
tests/: PSOandSMA.py  SMAspiral.py  psosmalinreg.py
